<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDEBF3"
    android:orientation="vertical"
    tools:context="com.example.stratos.dbtv02.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo1" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo111_white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/newMeasurementButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/txt_new_measurement"
                    android:scaleType="fitCenter"
                    android:src="@drawable/new_measurement" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_new_measurement"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_new_measurement_desc"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/calendarButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/txt_calendar"
                    android:scaleType="fitCenter"
                    android:src="@drawable/calendar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_calendar"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_calendar_desc"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/measurementsListButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/txt_measurements_list"
                    android:scaleType="fitCenter"
                    android:src="@drawable/measurements_list" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_measurements_list"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_measurements_list_desc"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/medBookButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/txt_med_book"
                    android:scaleType="fitCenter"
                    android:src="@drawable/med_book" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_med_book"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_med_book_desc"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/statisticsButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/txt_statistics"
                    android:scaleType="fitCenter"
                    android:src="@drawable/statistics" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_statistics"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_statistics_desc"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reminderButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/txt_reminder"
                    android:scaleType="fitCenter"
                    android:src="@drawable/reminder" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_reminder"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/txt_reminder_desc"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
